# rekx

./: .gitignore  .pre-commit-config.yaml  404.html  ReadMe.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  references.bib  setup.cfg  time_series.md
.github/workflows/: ci.yml  run_test.yml
cli/: index.html
cli/cli_reference/: index.html
cli/inspect/: index.html
cli/interface/: index.html
cli/kerchunking/: index.html
cli/logging/: index.html
cli/rechunk/: index.html
cli/select/: index.html
cli/shapes/: index.html
cli/suggest/: index.html
docs/: index.md  license.md  to_do.md
docs/about/: meta.md
docs/cli/: cli_reference.md  index.md  inspect.md  interface.md  kerchunking.md  logging.md  rechunk.md  select.md  shapes.md  suggest.md  tools.md
docs/how_to/: chunking_parameterisation.md  diagnose.md  help.md  how_to.md  index.md  inspect.md  kerchunk.md  kerchunk_to_json.md  kerchunk_to_parquet.md  read_performance.md  rechunk.md  rechunking_parameterisation.md  select.md  shapes.md  suggest.md
docs/includes/: abbreviations.md  glossary.md  tags.md
docs/install/: install.md
docs/meta/: index.md
docs/overrides/: main.html
docs/reference/: chunking.md  concepts.md  dask.md  index.md  kerchunking.md  notes.md  reference.md  xarray.md
docs/references/: eupl.bib  references.md  see_also.md
docs/stylesheets/: extra.css
docs/tutorials/: massive_json_kerchunking.md  tutorials.md
docs/tutorials/sarah3/: chunking_sarah3_time_series.md  sarah3_sid_time_variables.md
how_to/: index.html
how_to/chunking_parameterisation/: index.html
how_to/diagnose/: index.html
how_to/help/: index.html
how_to/how_to/: index.html
how_to/inspect/: index.html
how_to/kerchunk_to_json/: index.html
how_to/kerchunk_to_parquet/: index.html
how_to/read_performance/: index.html
how_to/rechunk/: index.html
how_to/select/: index.html
how_to/shapes/: index.html
how_to/suggest/: index.html
include_files/: envrc
includes/abbreviations/: index.html
includes/tags/: index.html
install/install/: index.html
license/: index.html
meta/: index.html
overrides/: main.html
reference/: index.html
reference/chunking/: index.html
reference/concepts/: index.html
reference/dask/: index.html
reference/kerchunking/: index.html
reference/notes/: index.html
reference/reference/: index.html
reference/xarray/: index.html
references/references/: index.html
references/see_also/: index.html
rekx/: .pre-commit-config.yaml  backend.py  cli.py  clip.py  combine.py  consistency.py  constants.py  conversions.py  convert.py  csv.py  diagnose.py  hardcodings.py  inspect.py  log.py  messages.py  models.py  netcdf_metadata.py  parquet.py  print.py  progress.py  read.py  rechunk.py  reference.py  rich_help_panel_names.py  select.py  shapes.py  statistics.py  suggest.py  timestamp.py  typer_parameters.py  utilities.py  validate.py  write.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  minimal_netcdf.nc  test_cli.py  test_detect_chunking_shapes.py  test_get_netcdf_metadata.py  test_inspect.py  test_minimal_netcdf_file.py
to_do/: index.html
tutorials/massive_json_kerchunking/: index.html
tutorials/tutorials/: index.html
