[build-system]
# https://setuptools.pypa.io/en/latest/build_meta.html#how-to-use-it
# requires = ["setuptools", "wheel", "setuptools_scm"]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Use VCS tags as the sole authority on versions.  Dynamically determine the current
# version from VCS tags:
# https://github.com/pypa/setuptools_scm#pyprojecttoml-usage
write_to = "rekx/version.py"
# Uncomment to test uploading to PyPI locally
# local_scheme = "no-local-version"
[tool.commitizen]
# Parse commit messages according to conventional commits to decide wether the next
# versin tag should be a major, minor or patch bump and create the VCS tag.  Also
# provides VCS hooks to enforce that commit messages comply with conventional commits:
# https://commitizen-tools.github.io/commitizen/
name = "cz_conventional_commits"
# TEMPLATE: Update these versions to the latest version for your project and ensure the
# tag exists both locally and on the project's remote:
changelog_start_rev = "v0.1.0"
version = "0.1.0"
# dynamic = ["version"]
tag_format = "v$version"
annotated_tag = true
gpg_sign = true
bump_message = """\
build(release): Version $current_version → $new_version

[actions skip]
[ci release]
"""
[tool.towncrier]
# https://towncrier.readthedocs.io/en/stable/#quick-start
package = "rekx"
package_dir = "rekx"
name = "rekx"

[tool.pylint.MASTER]
# Ensure `duplicate-code` and any other errors that depend on not runnining in parallel
# are reported:
jobs = 1
enable-all-extensions = true
output-format = "colorized"
ignore-paths = [
# Managed by tools, best to use `# pylint: disable=...` inline comments for any other
# ignores.
    ".+/version.py",
    ".*/.+/version.py",
]
# Extend linting to usage of trusted extension packages
extension-pkg-allow-list = ["lxml"]
[tool.pylint.TYPECHECK]
# Ignore false negatives from external packages
ignored-classes = ["lxml.etree.QName.localname"]
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.format]
max-line-length = "88"
[tool.pylint."messages control"]
# Workaround Prospector bug with PyLint:
# https://github.com/PyCQA/prospector/issues/596#issue-1592499675
disable = ["relative-beyond-top-level"]
[[tool.mypy.overrides]]
module = ["argcomplete"]
ignore_missing_imports = true

[tool.vulture]
# https://github.com/jendrikseipp/vulture#ignoring-files
exclude = ["rekx/version.py"]

[tool.isort]
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra --verbose --showlocals --tb=short"
testpaths = ["tests"]
log_cli = true
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]
