[metedata]
# TEMPLATE: Adjust this Python distribution metadata as appropriate for your project:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#metadata
name = rekx
# version = attr: src.rekx.version
version = attr: 0.0.1
description = rekx : Xarray after Kerchunk
url = https://github.com/nikosalexandris/rekx
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = template, structure
author = Nikos Alexandris
author_email = nikosalexandris@duck.com
license = EUPL
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
# TEMPLATE: Add the run-time dependencies, as opposed to build, test, or development
# requirements, for your project:
install_requires =
# CLI Completion
    pydantic
    typer[all]
    rich
    xarray
    netCDF4
    distributed
    fastparquet
    kerchunk
    h5py
    xarray-extras

[options.entry_points]
console_scripts =
    rekx = rekx.cli:app

[options.extras_require]
# Development tools not strictly needed by the test suite but that need this
# package/dist and its dependencies to be to be on the same `sys.path`, IOW to be
# importable.
dev =
    loguru
    devtools
    pytest
    pytest-mpl
    coverage
# Code style and linting tools
# Chose prospector based mostly on this excellent blog:
# https://pawamoy.github.io/posts/python-static-code-analysis-tools/#prospector
    prospector[with_everything]
    xenon
    # rstcheck
# Code formatting tools
    black
    autoflake
    autopep8
# Manage fixed/pinned versions in `./requirements/**.txt`.  Has to be installed outside
# the container so that the resulting version pins can be baked into the container
# image.
    pip-tools
# Build tools that don't need this package to be importable but do need to be installed
# inside the container.
# Generate release notes/changelogs
    towncrier
# Build installable distributions, AKA packages
    build

web = 
    bokeh
[tool:pytest]
testpaths = rekx

[coverage:run]
command_line = -m pytest --junit-xml=pytest-junit.xml
branch = True
# source = src
source = rekx
[coverage:report]
fail_under = 100
show_missing = True

[flake8]
exclude = src/*/version.py
# Match Black's defaults
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
max-line-length = 88
extend-ignore = E203
aggressive = 3
experimental = true
